# Automotive-Standard-Intelligent-Q-A-Project

./: .env  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh
app/ai/: langchainex.py
app/api/: deps.py  main.py
app/api/routes/v1/: login.py  users.py
app/core/: config.py  db.py  security.py
app/crud/: users_crud.py
app/models/: base_models.py  token_models.py  users_models.py
config/: settings.py
evaluations/: baseline.py  metrics.py
modules/: bert_finetuner.py  bert_reranker.py  doc_processor.py  hybrid_retrieval.py  pdf_processor.py  querystory.py  rag_chain.py  verifymd5.py
